# fast_api_accumen

./: .coverage  .gitignore  README.md  adtte1.sas7bdat  adtte2.sas7bdat  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/routers/: projects.py
app/api/v1/: router.py
app/core/: config.py
app/crud/: project.py
app/db/: base.py  session.py
app/models/: user.py
app/schemas/: project.py
app/services/: converter.py  project_service.py
app/utils/: azure_blob.py
tests/: conftest.py  test_project.py  test_projects.py
tests/integration/: conftest.py  test_file_uploads.py  test_projects_api.py
